--- a/article.html
+++ b/article.html
@@ -96,6 +96,7 @@
 
 	<script type="text/javascript" src="like.js"></script>
 	<script type="text/javascript" src="limittext.js"></script>
+	<script type="text/javascript" src="comments.js"></script>
 	
 
 </body>
